--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.28</slf4j.version>
 
+        <!--    Tests  -->
+        <junit.version>4.12</junit.version>
+
         <!--DB-->
         <postgresql.version>42.2.8</postgresql.version>
         <!--    Tests  -->
@@ -106,6 +109,14 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <!--Test-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!--Test-->
